[package]
name = "lf-structs"
license = "MIT"
authors = ["10takla <https://github.com/10takla>"]
description = "Various implementations of free locking and atomicity of data structures"
keyword = ["lock_free", "atomic", "concurrency_primitives", "locks"]
version = "0.1.0"
repository = "https://github.com/10takla/lf-structs"
edition = "2021"

[dependencies]
atomic-wait = "1.1.0"
crossbeam = "0.8.4"
memory-stats = "1.2.0"
rand = "0.8.5"
std-reset = {path = "../std_reset"}
